# api_crawler

./: .env  .gitignore  README.md  __init__.py  exceptions.py  pyproject.toml  requirements.txt  temp_test_run_data.json
api/: apify.py  base.py  brave.py  github.py  glassdoor.py  news.py  reddit.py  serp_api.py  youtube.py
api_crawler/: __init__.py
api_crawler/data_lake/: __init__.py  logger.py
api_crawler/data_sources/: github.py  glassdoor.py  news.py
data_lake/: __init__.py  logger.py
data_sources/: __init__.py  _base.py  apify.py  brave.py  github.py  glassdoor.py  indeed.py  linked_in.py  news.py  reddit.py  salary.py  serp_api.py  youtube.py
docs/: Easily Creating Data Lakes.ipynb  Glassdoor.ipynb  Indeed API.ipynb  LinkedIn API.ipynb  Salary API.ipynb  Youtube API.ipynb  Youtube Data Extraction.ipynb  glassdoor_api.ipynb  indeed_api.ipynb  linkedin_api.ipynb  salary_api.ipynb
examples/: monitor_jobs.ipynb
lake/: logger.py
tests/: test_brave_api.py  test_github_api.py  test_glassdoor_api.py  test_indeed_api.py  test_linkedin_api.py  test_news_api.py  test_salary_api.py  test_serp_api.py  test_youtube_api.py
